<resources>
    <string name="app_name">Jaunt</string>
    <string name="appname">AppName</string>
    <string name="applogo">AppLogo</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_btn_title">Sign In</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="first_name">First name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="last_name">Last name</string>
    <string name="my_hours">MY HOURS</string>
    <string name="history">HISTORY</string>
    <string name="earnings">EARNINGS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_location">Saint Joseph, Missouri</string>
    <string name="profile_name">Baoqiang Yan</string>
    <string name="profile_photo">Contact Profile Photo</string>
    <string name="registration">Registration</string>
    <string name="profile">Profile</string>
    <string name="profile_activity_title">MY PROFILE</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="floating_action_bar_of_hours_record">Floating Action Bar of Hours Record</string>
    <string name="register_to_drive">Register to Drive</string>
    <string name="phone_number">Phone Number</string>
    <string name="birth_day">Birth Day (mm/dd/yyyy)</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="city_state">City/State</string>
    <string name="zip_code">Zip Code</string>
    <string name="upload_driver_license">Upload Driver License</string>
    <string name="submit">Submit</string>
    <string name="section_title">Section Title</string>
    <string name="address_placeholder_text">803 North 36th Street</string>
    <string name="city_state_placeholder_text">Saint Joseph, MO</string>
    <string name="history_icon">History Icon</string>
    <string name="openweatherapi_key">c0c2d2644e3d15494fca5f45de12f4dd</string>
</resources>
