<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:orderInCategory="1"
        android:title=" "
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/driver_register"
                android:icon="@drawable/ic_directions_car_black_24dp"
                android:title="@string/registration" />
            <item
                android:id="@+id/account_profile"
                android:icon="@drawable/ic_account_box_black_24dp"
                android:title="@string/profile" />
            <item
                android:id="@+id/account_settings"
                android:icon="@drawable/ic_settings_applications_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/account_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>

<!--<menu xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--tools:context=".AccountActivity">-->

    <!--<item-->
        <!--android:id="@+id/driver_register"-->
        <!--android:icon="@drawable/ic_directions_car_black_24dp"-->
        <!--android:title="@string/registration"-->
        <!--app:showAsAction="never" />-->
    <!--<item-->
        <!--android:id="@+id/account_profile"-->
        <!--android:icon="@drawable/ic_account_box_black_24dp"-->
        <!--android:title="@string/profile"-->
        <!--app:showAsAction="never" />-->
    <!--<item-->
        <!--android:id="@+id/account_settings"-->
        <!--android:icon="@drawable/ic_settings_applications_black_24dp"-->
        <!--android:title="@string/settings"-->
        <!--app:showAsAction="never" />-->
    <!--<item-->
        <!--android:id="@+id/account_logout"-->
        <!--android:icon="@drawable/ic_power_settings_new_black_24dp"-->
        <!--android:title="@string/logout"-->
        <!--app:showAsAction="ifRoom" />-->
<!--</menu>-->