<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/account_appbar"
        android:layout_width="match_parent"
        android:layout_height="302dp"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/account_collaspe_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/account_toolbar"
            app:collapsedTitleGravity="center_horizontal">

            <csc445.missouriwestern.edu.jaunt.extensions.ui.CustomToolbar
                android:id="@+id/account_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">
            </csc445.missouriwestern.edu.jaunt.extensions.ui.CustomToolbar>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/profile_imageview"
                    android:layout_width="0dp"
                    android:layout_height="109dp"
                    android:background="@drawable/bg_circle"
                    android:contentDescription="@string/profile_photo"
                    android:onClick="photo_clicked"
                    android:scaleType="centerCrop"
                    android:src="@drawable/yan"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="w,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3" />

                <csc445.missouriwestern.edu.jaunt.extensions.ui.CustomTextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/profile_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@+id/profile_imageview"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/profile_imageview"
                    app:layout_constraintTop_toBottomOf="@+id/profile_imageview" />

                <csc445.missouriwestern.edu.jaunt.extensions.ui.CustomTextView
                    android:id="@+id/profile_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:text="@string/profile_location"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_name" />
            </android.support.constraint.ConstraintLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/white"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <include layout="@layout/fragments_account" />

    </android.support.v4.widget.NestedScrollView>

    <!--
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_circle_24dp"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/account_appbar"
        app:layout_anchorGravity="bottom|end"/>
     -->
</android.support.design.widget.CoordinatorLayout>
